# py-connectwidgets

./: .gitignore  README.html  README.md  README.qmd  pyproject.toml
py_connectwidgets/: connectwidgets.py  package_test.html  package_test.qmd
tests/: test_connectwidgets.py
